# slack-blocks-markdown

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  PUBLISHING.md  README.md  debug_blockquote.py  debug_quote_detailed.py  debug_test.py  edge_case_long_heading.json  edge_case_long_paragraph.json  edge_case_mixed_content.json  example_output.json  example_usage.py  main.py  output_basic_formatting.json  output_simple_message.json  output_technical_doc.json  pyproject.toml  slack_blocks_renderer.py  test_renderer.py
.claude/commands/prompt/: research_codebase.md  start.md
.claude/plans/: PYPI_TRUSTED_PUBLISHER_MIGRATION.md  RELEASE_0.1.1_PLAN.md
.github/workflows/: publish.yml  test.yml
examples/: README.md  TESTING.md  basic_usage.py  example_output.json  export_for_builder.py
scripts/: build.sh  publish-test.sh  publish.sh  verify-package.sh
src/slack_blocks_markdown/: __init__.py  blocks.py  renderer.py
tests/: conftest.py  test_blocks.py  test_integration.py  test_renderer.py
thoughts/shared/plans/: python_library_conversion_plan.md
thoughts/shared/research/: 2025-08-29_08-55-13_python_library_conversion.md
